# helloworld

./: Cargo.toml  Dockerfile  default.nix  helloworld.dhall  helloworld.nix  shell.nix
client/: Cargo.toml
client/src/: main.rs
nix/: rust.nix  sources.json
src/: TODO.org  main.rs
