[package]
name = "helloworld-client"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.7"
envy = "0.4"
